@@ -990,3 +990,4 @@
 	 the D variants timings consistent with the FAQ.
 20040707 acinclude.m4: update SDL macros to latest upstream.
 20040708 timer.c: modify timer calibration slightly (Darren).
+20040708 ui/fb/fbkeyboard.c: update for new input layer (Darren).
